# zenix

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  deepin-herdr.desktop  zenix.desktop
.github/workflows/: ci.yml  release.yml
archlinux/: PKGBUILD  zenix.install
debian/: changelog  control  install  rules
installers/linux/: zenix.spec
installers/macos/: Info.plist  package-dmg.sh
installers/windows/: zenix.iss
locales/: zenix.yml
src/: app.rs  config.rs  herdr.rs  i18n.rs  lib.rs  main.rs  platform.rs  sidebar.rs  sys.rs  system_info.rs  terminal.rs  terminal_element.rs
src/agent/: mod.rs
src/client/: mod.rs
src/mcp/: mod.rs
src/skills/: mod.rs
src/terminal/: element.rs  encoding.rs  mod.rs
src/ui/: mod.rs  settings.rs  sidebar.rs
