[package]
name = "zenix"
version = "0.1.0"
edition = "2024"
authors = ["zenix contributors"]
description = "A cross-platform GPUI frontend for herdr terminal workspace manager — extensible with plugins and sub-apps"
license = "GPL-3.0-or-later"

[dependencies]
# GPUI framework
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "runtime_shaders", "x11", "wayland"] }

# GPUI Component library
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# Terminal emulation — zed's alacritty fork
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "fcf32feacb367b75ec84dd40f041e4fd411d3cc1" }
portable-pty = "0.8"

# Networking
ureq = { version = "2", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "re2zero <yangwu@uniontech.com>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/zenix", "usr/bin/", "755"],
    ["target/release/herdr", "usr/share/zenix/", "755"],
    ["res/zenix.desktop", "usr/share/applications/", "644"],
    ["res/zenix.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["assets/fonts/Lilex-Regular.ttf", "usr/share/zenix/fonts/", "644"],
    ["assets/fonts/Lilex-Bold.ttf", "usr/share/zenix/fonts/", "644"],
    ["assets/fonts/Lilex-Italic.ttf", "usr/share/zenix/fonts/", "644"],
    ["assets/fonts/Lilex-BoldItalic.ttf", "usr/share/zenix/fonts/", "644"],
    ["assets/themes/gruvbox.json", "usr/share/zenix/themes/", "644"],
    ["assets/themes/solarized.json", "usr/share/zenix/themes/", "644"],
    ["assets/themes/tokyonight.json", "usr/share/zenix/themes/", "644"],
    ["assets/themes/matrix.json", "usr/share/zenix/themes/", "644"],
]
extended-description = """\
zenix is an extensible terminal workspace manager designed for AI coding agents.
It provides workspace, tab, and pane management with a client-server
architecture, plus system monitoring and plugin support.
.
This package contains the GPUI frontend that embeds the herdr
terminal client and auto-connects on first launch."""
